Add test for scene inheritance

--- a/src/libwpl/Makefile.am
+++ b/src/libwpl/Makefile.am
@@ -22,5 +22,5 @@ libwpl_1_1_la_SOURCES = \
 	array.cpp hash.cpp struct.cpp template.cpp \
 	namespace_session.cpp \
 	block_state.cpp expression_state.cpp function_state.cpp \
-	pragma_state.cpp text_state.cpp \
+	pragma_state.cpp text_state.cpp scene_state.cpp \
 	output_json.cpp
