Created access modifiers public, protected and private *   The implementation of these lead to a huge rewrite of the the type parsing system *   Parsing is now decentralized from block.cpp into types.cpp, struct.cpp etc. *   Parsed types throws exception when a variable has been declared, if a function call is reached or if a template specifier end '>' is reached *   Exceptions are left unhandeled in places where their specific type is not allowed *   The exception for function argument is left unhandeled inside the function argument list parser

--- a/src/libwpl/Makefile.am
+++ b/src/libwpl/Makefile.am
@@ -14,7 +14,7 @@ libwpl_1_1_la_SOURCES = \
 	shunting_yard.cpp block_if.cpp block_while.cpp \
 	scene.cpp string.cpp object.cpp types.cpp \
 	function.cpp user_function.cpp internal_function.cpp \
-	value.cpp operator.cpp text.cpp \
+	value.cpp operator.cpp text.cpp modifier.cpp \
 	value_array.cpp value_struct.cpp value_hash.cpp \
 	value_unresolved.cpp value_function_ptr.cpp value_list.cpp \
 	value_string.cpp value_vstring.cpp value_regex.cpp \
