Further fixes on apache module build system

--- a/configure.ac
+++ b/configure.ac
@@ -60,8 +60,8 @@ CHECK_APACHE(,$AP_VERSION,
 AP_MODULE_CFLAGS="${LIBGNUTLS_CFLAGS} ${SRP_CFLAGS} ${APR_MEMCACHE_CFLAGS} ${APXS_CFLAGS} ${AP_INCLUDES} ${APR_INCLUDES} ${APU_INCLUDES}"
 AP_MODULE_LIBS="${APR_MEMCACHE_LIBS} ${LIBGNUTLS_LIBS}"
 
-AC_SUBST(AC_MODULE_CFLAGS)
-AC_SUBST(AC_MODULE_LIBS)
+AC_SUBST([AP_MODULE_CFLAGS])
+AC_SUBST([AP_MODULE_LIBS])
 
 AC_DEFINE_UNQUOTED([WPL_BLOCK_MAX_CHILDREN], 64, [Max variable name length])
 AC_DEFINE_UNQUOTED([WPL_VARNAME_SIZE], 64, [Max variable name length])
