--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: pstar
 Section: web
 Priority: extra
 Maintainer: Atle Solbakken <atle@goliathdns.no>
-Build-Depends: debhelper (>= 8.0.0), autotools-dev, libmysqlclient-dev, libmimetic-dev, libboost-regex-dev, apache2-threaded-dev, pkg-config, libapr-memcache-dev
+Build-Depends: debhelper (>= 8.0.0), autotools-dev, libmysqlclient-dev, libmimetic-dev, libboost-regex-dev, apache2-threaded-dev, pkg-config, libapr-memcache-dev, chrpath
 Standards-Version: 3.9.3
 Homepage: http://www.p-star.org
 #Vcs-Git: git://git.debian.org/collab-maint/p-star.git
