--- a/src/apache2/Makefile.am
+++ b/src/apache2/Makefile.am
@@ -1,7 +1,10 @@
-libmod_pstar_la_SOURCES = mod_pstar.cpp
-libmod_pstar_la_CXXFLAGS = -Wall ${AP_MODULE_CFLAGS}
-libmod_pstar_la_LDFLAGS = -rpath ${AP_LIBEXECDIR} -module -avoid-version ${AP_MODULE_LIBS}
-	
+libmod_pstar_la_SOURCES = mod_pstar.cpp pstar_pool.cpp
+libmod_pstar_la_CPPFLAGS = -I$(top_srcdir)/src/libwpl -I$(top_srcdir)/include -include $(top_srcdir)/config.h
+libmod_pstar_la_CXXFLAGS = -Wall ${AP_MODULE_CFLAGS} -std=c++11
+libmod_pstar_la_LDFLAGS = -module -avoid-version ${AP_MODULE_LIBS} -L../libwpl
+libmod_pstar_la_LIBADD = ../libwpl/libwpl-${PACKAGE_VERSION}.la
+libmod_pstar_la_DEPENDENCIES = ../libwpl/libwpl-${PACKAGE_VERSION}.la
+
 lib_LTLIBRARIES = libmod_pstar.la
 
 clean:
