Initial Apache module complete! - New wpl_io class which replaces old ostream-methods - When outputting from TEXT or HTML_TEMPLATE, Apache directly uses the memory allocated when the file was loaded from disk - Fix in JSON output which now uses the new (and faster) buffer wpl_io_buffer - wpl_parser had a static includes counter which failed when running in apache. Replaced with a recursive method - Added Apache 2.0 licence to the Apache module

--- a/src/apache2/Makefile.am
+++ b/src/apache2/Makefile.am
@@ -1,4 +1,4 @@
-libmod_pstar_la_SOURCES = mod_pstar.cpp pstar_pool.cpp
+libmod_pstar_la_SOURCES = mod_pstar.cpp pstar_pool.cpp pstar_io.cpp
 libmod_pstar_la_CPPFLAGS = -I$(top_srcdir)/src/libwpl -I$(top_srcdir)/include -include $(top_srcdir)/config.h
 libmod_pstar_la_CXXFLAGS = -Wall ${AP_MODULE_CFLAGS} -std=c++11
 libmod_pstar_la_LDFLAGS = -module -avoid-version ${AP_MODULE_LIBS} -L../libwpl
